chore: divs for descriptions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <div class="header">
 
       <h1>Max Escobar Viegas</h1>
-      <h3>Learning by doing</h3>
+      <div class="typing-container">
+        <h3 id="typing-effect"></h3>
+      </div>
 </div>
 
 <div class="navbar">
@@ -29,13 +31,13 @@
     <h2>About Me</h2>
     <img class="smallimg" src="images/image_2.jpg" alt="Memory Collecting">
     <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
-    <h3>Check it out 🤙🏼:</h3>
+    <h3>Check this out 🤙🏼:</h3>
 
     <div class="interesting-stuff"></div>
   </div>
 
   <div class="main">
-    <div class="row">
+    <div class="buttons_bar">
 
         <button class="btn_personal" id="work" onclick="showButtonDiv(this.className, this.id)">Work Experience</button>
         <button class="btn_personal" id="education" onclick="showButtonDiv(this.className, this.id)">Education and Training</button>
@@ -45,7 +47,7 @@
 
     <div class="div_personal" id="work">
       <h2>WORKING STUDENT – SIEMENS</h2>
-    <h5>1/10/2023 – CURRENT – München, Germany</h5>
+    <h5>📍 1/10/2023 – CURRENT – München, Germany</h5>
    
     <p>Support in the configuration of demonstration systems for Perception applications based on the Siemens
       Industrial Edge infrastructure. This includes the configuration and installation of systems on peripheral
@@ -53,7 +55,7 @@
       e.g. in the area of data and result visualization in graphical user interfaces.</p>
     <br>
     <h2>AUTOMATION CONSULTANT – PRACTIA GLOBAL</h2>
-    <h5>29/12/2020 – 31/12/2023 – Santiago, Chile</h5>
+    <h5>📍 29/12/2020 – 31/12/2023 – Santiago, Chile</h5>
    
     <p>Implementing software automation solutions for the retail industry, aiming to enhance it's daily working process,
       by means of reducing manual labor and optimizing operational costs. This is achieved by a series of tasks, which 
@@ -63,7 +65,7 @@
     </p>
     <br>
     <h2>RPA CONSULTANT – SISUA DIGITAL</h2>
-    <h5>29/10/2018 – 28/11/2020 – Santiago, Chile </h5>
+    <h5>📍 29/10/2018 – 28/11/2020 – Santiago, Chile </h5>
    
     <p>Implementing automation solutions for different clients in the energy, retail and scientific research market in
       order to lower operational costs and efficiently assign productive resources. The main responsability was
@@ -71,13 +73,13 @@
       building BI dashboards for keeping track of several business metrics</p>
     <br>
     <h2>QUALITY ASSURANCE INTERN – SONDA </h2>
-    <h5>30/11/2017 – 27/02/2018 – Santiago, Chile </h5>
+    <h5>📍 30/11/2017 – 27/02/2018 – Santiago, Chile </h5>
    
     <p>Testing and verifying the correct execution of the features programmed in the context of enhancing the
       payment system of the public transport in Santiago using contactless smart cards.</p>
     <br>
     <h2>ENTREPRENEUR LEADER – APRENDO EMPRENDO </h2>
-    <h5>30/06/2016 – 29/11/2017 – Santiago, Chile </h5>
+    <h5>📍 30/06/2016 – 29/11/2017 – Santiago, Chile </h5>
    
     <p>Visiting highschools in the metropolitan region of Chile with the mission of encouraging young students to
       take part of an entrepreneurial school contest. Giving talks about different personal entrepreneuring
@@ -86,7 +88,7 @@
       implemented for them.</p>
     <br>
     <h2>PROJECT MANAGER – UNIVERSIDAD DE CHILE</h2>
-    <h5>27/02/2015 – 29/12/2017 – Santiago, Chile</h5>
+    <h5>📍 27/02/2015 – 29/12/2017 – Santiago, Chile</h5>
    
     <p>Leading an engineering student's team in the developing of a mobile application for reporting crime and
       incidents within the area of the university campus. The app was sucessfully implemented during one
@@ -97,24 +99,24 @@
     
 
     <div class="div_personal" id="education" hidden="hidden">
-    <h2>M. SC. MANAGEMENT AND TECHNOLOGY – Technische Universität München</h2>
-    <h5>01/10/2023 – CURRENT – München, Germany</h5>
+    <h2>M. SC. MANAGEMENT AND TECHNOLOGY – Technische Universität München 🇩🇪 </h2>
+    <h5>📍 01/10/2023 – CURRENT – München, Germany</h5>
    
     <p>Address Arcisstr. 21, 80333, München, Germany. <a href="https://www.tum.de/studium/studienangebot/detail/management-and-technology-tum-bwl-master-of-science-msc">Link to Degree´s curriculum.</a></p>
     <br>
   
-    <h2>INDUSTRIAL ENGINEER – Universidad de Chile</h2>
-    <h5>28/02/2014 – 22/12/2020 – Santiago, Chile</h5>
+    <h2>INDUSTRIAL ENGINEER – Universidad de Chile 🇨🇱 </h2>
+    <h5>📍 28/02/2014 – 22/12/2020 – Santiago, Chile</h5>
    
     <p>Address Beauchef 850, Santiago, Chile. <a href="https://www.dii.uchile.cl/~webpgrado2/plan-de-estudios/malla-curricular/">Link to Degree´s curriculum.</a></p>
     <br>
-    <h2>RESOLVE LEARNING PROGRAM'S ATTENDEE – Singularity University</h2>
-    <h5>30/10/2016 – 13/11/2016 – Santa Clara, United States</h5>
+    <h2>RESOLVE LEARNING PROGRAM'S ATTENDEE – Singularity University 🇺🇸</h2>
+    <h5>📍 30/10/2016 – 13/11/2016 – Santa Clara, United States</h5>
    
     <p>Address: 2831 Mission College Blvd, Santa Clara, United States. <a href="https://www.su.org/">Link to program details.</a></p>
     <br>
-    <h2>BUSINESS ADMINISTRATION INTERNATIONAL STUDENT – Universitat Politècnica de València </h2>
-    <h5>30/01/2016 – 28/06/2016 – València, Spain</h5>
+    <h2>BUSINESS ADMINISTRATION INTERNATIONAL STUDENT – Universitat Politècnica de València 🇪🇸</h2>
+    <h5>📍 30/01/2016 – 28/06/2016 – València, Spain</h5>
    
     <p>Address Camí de Vera , València, Spain. <a href="https://www.upv.es/entidades/ADE/infoweb/fade/info/630155normalc.html">Link to Degree´s curriculum.</a></p>
     <br>
@@ -161,7 +163,7 @@
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/python.svg" alt="Python" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/java.svg" alt="Java" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/csharp.svg" alt="C#" class="skill-logo">
-        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/powerbi.svg" alt="Power BI" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/r.svg" alt="R" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/git.svg" alt="Git" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/sqlite.svg" alt="SQLite" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/mysql.svg" alt="MySQL" class="skill-logo">
