chore: smaller table

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
   <div class="side">
     <h2>About Me</h2>
     <img class="smallimg" src="images/image_2.jpg" alt="Memory Collecting">
-    <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
+  <div class="about"><p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. 
+    To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). 
+    When I don't know what else to do, I plan a trip or write a song.</p></div>
+    
     <h3>Check this out 🤙🏼:</h3>
 
     <div class="interesting-stuff"></div>
