--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="portfolio-website" />
 <link rel="stylesheet" href="styles.css" />
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@200;300&display=swap" rel="stylesheet">
 <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
@@ -101,7 +101,7 @@
 
     
 
-    <div class="div_personal" id="education" hidden="hidden">
+    <div class="div_personal" id="education">
     <h2>M. SC. MANAGEMENT AND TECHNOLOGY – Technische Universität München 🇩🇪 </h2>
     <h5>📍 01/10/2023 – CURRENT – München, Germany</h5>
    
@@ -125,7 +125,7 @@
     <br>
     </div>
 
-    <div class="div_personal" id="skills" hidden="hidden">
+    <div class="div_personal" id="skills">
       <h2>LANGUAGE SKILLS</h2>
       <p><b>Mother tongue:</b> Spanish 🇨🇱</p>
       <div class="table">
@@ -174,7 +174,7 @@
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/html5.svg" alt="HTML" class="skill-logo">
       </div></div>
     
-  </div>
+    </div>
     </div>
   </div>
 </div>
