chore: restore hidden attr

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         
 
-    <div class="div_personal" id="work">
+    <div class="div_personal" id="work" >
       <h2>WORKING STUDENT – SIEMENS</h2>
     <h5>📍 1/10/2023 – CURRENT – München, Germany</h5>
    
@@ -101,7 +101,7 @@
 
     
 
-    <div class="div_personal" id="education">
+    <div class="div_personal" id="education" hidden="hidden" >
     <h2>M. SC. MANAGEMENT AND TECHNOLOGY – Technische Universität München 🇩🇪 </h2>
     <h5>📍 01/10/2023 – CURRENT – München, Germany</h5>
    
@@ -125,7 +125,7 @@
     <br>
     </div>
 
-    <div class="div_personal" id="skills">
+    <div class="div_personal" id="skills" hidden="hidden" >
       <h2>LANGUAGE SKILLS</h2>
       <div class="language">
         <p><b>Spanish 🇨🇱 :</b> Mother tongue <br><i>(👋🏼 Buena hermanito! Cómo andamos?)</i></p>
