chore:  thioner buttons

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <h3 id="typing-effect"></h3>
       </div>
   </div>
-
-<div class="navbar">
+  <div class="wavy-container">
+<nav class="navbar">
   <a href="index.html">Curriculum</a>
   <a href="maxiboy.html">Presskit</a>
   <a href="download_cv.html" class="right">CV download</a>
+</nav>
 </div>
 
 <div class="row">
@@ -49,7 +50,7 @@
         
 
     <div class="div_personal" id="work" >
-      <h2>WORKING STUDENT – SIEMENS</h2>
+      <h2>WORKING STUDENT – Siemens</h2>
     <h5>📍 1/10/2023 – CURRENT – München, Germany</h5>
    
     <p>Support in the configuration of demonstration systems for Perception applications based on the Siemens
@@ -57,7 +58,7 @@
       devices and associated applications as well as the adaptation and further development of the applications,
       e.g. in the area of data and result visualization in graphical user interfaces.</p>
     <br>
-    <h2>AUTOMATION CONSULTANT – PRACTIA GLOBAL</h2>
+    <h2>AUTOMATION CONSULTANT – Practia Global</h2>
     <h5>📍 29/12/2020 – 31/12/2023 – Santiago, Chile</h5>
    
     <p>Implementing software automation solutions for the retail industry, aiming to enhance it's daily working process,
@@ -67,7 +68,7 @@
        the business's performance via interactive dashboards.
     </p>
     <br>
-    <h2>RPA CONSULTANT – SISUA DIGITAL</h2>
+    <h2>RPA CONSULTANT – Sisua Digital</h2>
     <h5>📍 29/10/2018 – 28/11/2020 – Santiago, Chile </h5>
    
     <p>Implementing automation solutions for different clients in the energy, retail and scientific research market in
@@ -75,13 +76,13 @@
       developing RPA (robotic process automation) bots, structuring the business data involved in the process and
       building BI dashboards for keeping track of several business metrics</p>
     <br>
-    <h2>QUALITY ASSURANCE INTERN – SONDA </h2>
+    <h2>QUALITY ASSURANCE INTERN – Sonda </h2>
     <h5>📍 30/11/2017 – 27/02/2018 – Santiago, Chile </h5>
    
     <p>Testing and verifying the correct execution of the features programmed in the context of enhancing the
       payment system of the public transport in Santiago using contactless smart cards.</p>
     <br>
-    <h2>ENTREPRENEUR LEADER – APRENDO EMPRENDO </h2>
+    <h2>ENTREPRENEUR LEADER – Aprendo Emprendo </h2>
     <h5>📍 30/06/2016 – 29/11/2017 – Santiago, Chile </h5>
    
     <p>Visiting highschools in the metropolitan region of Chile with the mission of encouraging young students to
@@ -90,7 +91,7 @@
       students that presented the most outstanding ideas, hence effective communication workshops were
       implemented for them.</p>
     <br>
-    <h2>PROJECT MANAGER – UNIVERSIDAD DE CHILE</h2>
+    <h2>PROJECT MANAGER – Universidad de Chile</h2>
     <h5>📍 27/02/2015 – 29/12/2017 – Santiago, Chile</h5>
    
     <p>Leading an engineering student's team in the developing of a mobile application for reporting crime and
@@ -156,6 +157,7 @@
 <div class="footer">
   <h2>Treibs nicht zu bunt 🪂</h2>
   <p>Made with 🍺 somewhere</p>
+  <a href="mailto:maxescovi@gmail.com">Contact ✉️ </a>
 </div>
 
 <script type="text/javascript" src="scripts.js"></script>
