--- a/index.html
+++ b/index.html
@@ -156,7 +156,21 @@
 <div class="footer">
   <h2>Treibs nicht zu bunt 🪂</h2>
   <p>Made with 🍺 somewhere</p>
-  <a href="mailto:maxescovi@gmail.com">Contact ✉️ </a>
+  <a href="mailto:maxescovi@gmail.com" target="_blank" rel="noopener noreferrer">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/gmail.svg" alt="gmail">
+  </a>
+  <a href="https://www.instagram.com/perro_flac0/?hl=es-la" target="_blank" rel="noopener noreferrer">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/instagram.svg" alt="instagram">
+  </a>
+  <a href="https://www.youtube.com/@maxiboy_cl" target="_blank" rel="noopener noreferrer">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/youtube.svg" alt="youtube">
+  </a> 
+  <a href="https://open.spotify.com/artist/7IsZ5eyceLzv0kOqFrvGNN?dl_branch=1&nd=1&dlsi=f63c96f75f6a48fa" target="_blank" rel="noopener noreferrer">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/spotify.svg" alt="youtube">
+  </a> 
+
+
+  
 </div>
 
 <script type="text/javascript" src="scripts.js"></script>
