chore: allign text in interesting stuff

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/youtube.svg" alt="youtube">
   </a> 
   <a href="https://open.spotify.com/artist/7IsZ5eyceLzv0kOqFrvGNN?dl_branch=1&nd=1&dlsi=f63c96f75f6a48fa" target="_blank" rel="noopener noreferrer">
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/spotify.svg" alt="youtube">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/spotify.svg" alt="spotify">
   </a> 
 
 
