chore: same style across pages

--- a/download_cv.html
+++ b/download_cv.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 <title>Max Escobar Viegas</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="portfolio-website" />
 <link rel="stylesheet" href="styles.css" />
-<script type="text/javascript" src="scripts.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.2.8/pdfobject.min.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@200;300&display=swap" rel="stylesheet">
 <link rel="icon" type="image/png" href="images/favicon.png">
-
 </head>
 <body>
 
-<div class="header">
+  <div class="header">
     <h1>Max Escobar Viegas</h1>
-    <h3>Lernen beim Tun</h3>
-</div>
+    <div class="typing-container">
+      <h3 id="typing-effect"></h3>
+    </div>
+  </div>
 
-<div class="navbar">
+<nav class="navbar">
   <a href="index.html">Curriculum</a>
   <a href="maxiboy.html">Presskit</a>
   <a href="download_cv.html" class="right">CV download</a>
-</div>
+</nav>
 
 <div class="row">
   <div class="side">
@@ -47,6 +46,21 @@
 <div class="footer">
   <h2>Treibs nicht zu bunt 🪂</h2>
   <p>Made with 🍺 somewhere</p>
+  <a href="mailto:maxescovi@gmail.com" >
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/gmail.svg" alt="gmail">
+  </a>
+  <a href="https://www.instagram.com/perro_flac0/?hl=es-la">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/instagram.svg" alt="instagram">
+  </a>
+  <a href="https://www.youtube.com/@maxiboy_cl" >
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/youtube.svg" alt="youtube">
+  </a> 
+  <a href="https://open.spotify.com/artist/7IsZ5eyceLzv0kOqFrvGNN?dl_branch=1&nd=1&dlsi=f63c96f75f6a48fa">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/spotify.svg" alt="spotify">
+  </a> 
+
+
+  
 </div>
 
 
