--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
 
   <div class="header">
-      <h1>Max Escobar Viegas</h1>
-      
-      <div class="typing-container">
-        <h3 id="typing-effect"></h3>
-      </div>
+    <h1>Max Escobar Viegas</h1>
+    <div class="typing-container">
+      <h3 id="typing-effect"></h3>
+    </div>
   </div>
+
 <nav class="navbar">
   <a href="index.html">Curriculum</a>
   <a href="maxiboy.html">Presskit</a>
@@ -42,9 +42,9 @@
   <div class="main">
 
         <div class="buttons_bar">
-          <button class="btn_personal" id="work" onclick="showButtonDiv(this.className, this.id)">Work Experience</button>
-          <button class="btn_personal" id="education" onclick="showButtonDiv(this.className, this.id)">Education and Training</button>
-          <button class="btn_personal" id="skills" onclick="showButtonDiv(this.className, this.id)">Skills and Hobbies</button>
+          <a class="btn_personal" id="work" onclick="showButtonDiv(this.className, this.id)">Work Experience</a>
+          <a class="btn_personal" id="education" onclick="showButtonDiv(this.className, this.id)">Education and Training</a>
+          <a class="btn_personal" id="skills" onclick="showButtonDiv(this.className, this.id)">Skills and Hobbies</a>
         </div>
         
 
@@ -156,16 +156,16 @@
 <div class="footer">
   <h2>Treibs nicht zu bunt 🪂</h2>
   <p>Made with 🍺 somewhere</p>
-  <a href="mailto:maxescovi@gmail.com" target="_blank" rel="noopener noreferrer">
+  <a href="mailto:maxescovi@gmail.com" >
     <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/gmail.svg" alt="gmail">
   </a>
-  <a href="https://www.instagram.com/perro_flac0/?hl=es-la" target="_blank" rel="noopener noreferrer">
+  <a href="https://www.instagram.com/perro_flac0/?hl=es-la">
     <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/instagram.svg" alt="instagram">
   </a>
-  <a href="https://www.youtube.com/@maxiboy_cl" target="_blank" rel="noopener noreferrer">
+  <a href="https://www.youtube.com/@maxiboy_cl" >
     <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/youtube.svg" alt="youtube">
   </a> 
-  <a href="https://open.spotify.com/artist/7IsZ5eyceLzv0kOqFrvGNN?dl_branch=1&nd=1&dlsi=f63c96f75f6a48fa" target="_blank" rel="noopener noreferrer">
+  <a href="https://open.spotify.com/artist/7IsZ5eyceLzv0kOqFrvGNN?dl_branch=1&nd=1&dlsi=f63c96f75f6a48fa">
     <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/spotify.svg" alt="spotify">
   </a> 
 
