--- a/maxiboy.html
+++ b/maxiboy.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 <title>Max Escobar Viegas</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="portfolio-website" />
 <link rel="stylesheet" href="styles.css" />
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@200;300&display=swap" rel="stylesheet">
+<script type="text/javascript" src="scripts.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.2.8/pdfobject.min.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;600&family=Roboto:wght@200;400;600&display=swap" rel="stylesheet">
 <link rel="icon" type="image/png" href="images/favicon.png">
+
 </head>
 <body>
 
@@ -27,7 +30,7 @@
 
 <div class="row">
   <div class="side">
-    <h2>About Me</h2>
+    <h2>About me:</h2>
     <img class="smallimg" src="images/image_2.jpg" alt="Memory Collecting">
     <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
     <h3>Check it out 🤙🏼:</h3>
@@ -60,8 +63,6 @@
   
     
   </div>
-
-  <script type="text/javascript" src="scripts.js"></script>
 
 
 </body>
