chore: added background color

--- a/index.html
+++ b/index.html
@@ -107,23 +107,23 @@
     <h2>M. SC. MANAGEMENT AND TECHNOLOGY – Technische Universität München 🇩🇪 </h2>
     <h5>📍 01/10/2023 – CURRENT – München, Germany</h5>
    
-    <p>Address Arcisstr. 21, 80333, München, Germany. <a href="https://www.tum.de/studium/studienangebot/detail/management-and-technology-tum-bwl-master-of-science-msc">Link to Degree´s curriculum.</a></p>
+    <h5>Arcisstr. 21, 80333, München, Germany. <a href="https://www.tum.de/studium/studienangebot/detail/management-and-technology-tum-bwl-master-of-science-msc">Link to Degree´s curriculum.</a></h5>
     <br>
   
     <h2>INDUSTRIAL ENGINEER – Universidad de Chile 🇨🇱 </h2>
     <h5>📍 28/02/2014 – 22/12/2020 – Santiago, Chile</h5>
    
-    <p>Address Beauchef 850, Santiago, Chile. <a href="https://www.dii.uchile.cl/~webpgrado2/plan-de-estudios/malla-curricular/">Link to Degree´s curriculum.</a></p>
+    <h5>Beauchef 850, Santiago, Chile. <a href="https://www.dii.uchile.cl/~webpgrado2/plan-de-estudios/malla-curricular/">Link to Degree´s curriculum.</a></h5>
     <br>
     <h2>RESOLVE LEARNING PROGRAM'S ATTENDEE – Singularity University 🇺🇸</h2>
     <h5>📍 30/10/2016 – 13/11/2016 – Santa Clara, United States</h5>
    
-    <p>Address: 2831 Mission College Blvd, Santa Clara, United States. <a href="https://www.su.org/">Link to program details.</a></p>
+    <h5>2831 Mission College Blvd, Santa Clara, United States. <a href="https://www.su.org/">Link to program details.</a><h5>
     <br>
     <h2>BUSINESS ADMINISTRATION INTERNATIONAL STUDENT – Universitat Politècnica de València 🇪🇸</h2>
     <h5>📍 30/01/2016 – 28/06/2016 – València, Spain</h5>
    
-    <p>Address Camí de Vera , València, Spain. <a href="https://www.upv.es/entidades/ADE/infoweb/fade/info/630155normalc.html">Link to Degree´s curriculum.</a></p>
+    <h5>Camí de Vera , València, Spain. <a href="https://www.upv.es/entidades/ADE/infoweb/fade/info/630155normalc.html">Link to Degree´s curriculum.</a></h5>
     <br>
     </div>
 
