chore: borders,stack elements, added skills and icons

--- a/download_cv.html
+++ b/download_cv.html
@@ -49,18 +49,12 @@
 <div class="footer">
   <h2>Treibs nicht zu bunt 🪂</h2>
   <p>Made with 🍺 somewhere</p>
-  <a href="mailto:maxescovi@gmail.com" >
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/gmail.svg" alt="gmail">
-  </a>
-  <a href="https://www.instagram.com/perro_flac0/?hl=es-la">
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/instagram.svg" alt="instagram">
-  </a>
-  <a href="https://www.youtube.com/@maxiboy_cl" >
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/youtube.svg" alt="youtube">
-  </a> 
-  <a href="https://open.spotify.com/artist/7IsZ5eyceLzv0kOqFrvGNN?dl_branch=1&nd=1&dlsi=f63c96f75f6a48fa">
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/spotify.svg" alt="spotify">
-  </a> 
+  <a href="mailto:maxescovi@gmail.com" ><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/gmail.svg" alt="gmail"></a>
+  <a href="https://www.instagram.com/perro_flac0/?hl=es-la"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/instagram.svg" alt="instagram"></a>
+  <a href="https://www.youtube.com/@maxiboy_cl"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/youtube.svg" alt="youtube"></a> 
+  <a href="https://open.spotify.com/artist/7IsZ5eyceLzv0kOqFrvGNN?dl_branch=1&nd=1&dlsi=f63c96f75f6a48fa"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/spotify.svg" alt="spotify"></a> 
+
+
 
 
   
