chore: better despcription phrasing

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </div>
       <p>Support in the configuration of demonstration systems for Perception applications based on the Siemens
         Industrial Edge infrastructure. This includes the configuration and installation of systems on peripheral
-        devices and associated applications as well as the adaptation and further development of the applications,
-        e.g. in the area of data and result visualization in graphical user interfaces.</p>
+        devices, as well as the adaptation and further development of applications,
+        e.g. in the area of data and metric visualization in graphical user interfaces.</p>
         <div>
         </div>
       </div>
@@ -97,7 +97,7 @@
       
      
       <p>Implementing automation solutions for different clients in the energy, retail and scientific research market in
-        order to lower operational costs and efficiently assign productive resources. The main responsability was
+        order to lower operational costs and efficiently assign productive resources. The main task performed consisted in
         developing RPA (robotic process automation) bots, structuring the business data involved in the process and
         building BI dashboards for keeping track of several business metrics</p>
     </div>
