--- a/download_cv.html
+++ b/download_cv.html
@@ -23,9 +23,9 @@
   </div>
 
 <nav class="navbar">
-  <a href="index.html">Curriculum</a>
+  <a href="index.html">Resume</a>
   <a href="maxiboy.html">Presskit</a>
-  <a href="download_cv.html" class="right">CV download</a>
+  <a href="download_cv.html" class="right">Resume PDF</a>
 </nav>
 
 <div class="row">
@@ -56,7 +56,7 @@
   <a href="https://www.youtube.com/@maxiboy_cl"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/youtube.svg" alt="youtube"></a> 
   <a href="https://open.spotify.com/artist/7IsZ5eyceLzv0kOqFrvGNN?dl_branch=1&nd=1&dlsi=f63c96f75f6a48fa"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/spotify.svg" alt="spotify"></a> 
   <a href="https://www.linkedin.com/in/maximiliano-escobar-viegas-118804136"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/linkedin.svg" alt="linkedin"></a> 
-
+  <a href="https://github.com/elmaxiboy"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/github.svg" alt="github"></a>
 
 
 
