chore: added docker skill

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/rust.svg" alt="Rust" class="skill-logo">
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/linux.svg" alt="linux" class="skill-logo">
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/python.svg" alt="Python" class="skill-logo">
+          <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/docker.svg" alt="Docker" class="skill-logo">
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/java.svg" alt="Java" class="skill-logo">
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/csharp.svg" alt="C#" class="skill-logo">
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/r.svg" alt="R" class="skill-logo">
