chore: renamed cv

--- a/download_cv.html
+++ b/download_cv.html
@@ -42,7 +42,7 @@
 
   <div class="main">
     <div class= cv id="cv">
-    <script> embedPDF("cv_max_escobar_2025")</script>     
+    <script> embedPDF("cv")</script>     
   </div>
     
 </div>
