chore: updated music message

--- a/maxiboy.html
+++ b/maxiboy.html
@@ -34,7 +34,7 @@
     <h2>About me:</h2>
     <img class="smallimg" src="images/image_5.jpg" alt="Memory Collecting">
     <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
-    <h3>Check it out 🤙🏼:</h3>
+    <h3>Sometimes I make songs 🤙🏼:</h3>
 
     <div class="interesting-stuff"></div>
     </div>
