--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. 
         To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). 
         When I don't know what else to do, I plan a trip or write a song.</p>
-      <h3>Check this out 🤙🏼:</h3>
+      <h3>Sometimes I make songs 🤙🏼:</h3>
       <div class="interesting-stuff"></div>
       </div>
     </div>
