chore: deutsch flussigkeit verbessert

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <div class="language">
           <p><b>Spanish 🇨🇱 :</b> Mother tongue <br><i>(👋🏼 Buena hermanito! Cómo andamos?)</i></p>
           <p><b>English 🇺🇸 :</b> C1 <br><i>(👋🏼 Hey brother! How's it goin'?)</i></p>
-          <p><b>German 🇩🇪 :</b> A2 <br><i>(👋🏼 Hallo brudi! Wie läuft es bei Ihnen?)</i> </p>
+          <p><b>German 🇩🇪 :</b> B2 <br><i>(👋🏼 Hallo brudi! Wie läuft es bei Ihnen?)</i> </p>
         </div>
   
       </div>
