--- a/maxiboy.html
+++ b/maxiboy.html
@@ -41,7 +41,7 @@
   </div>
   <div class="main">
      <div class= presskit id="presskit">
-       <script> embedPDF("presskit")</script>     
+       <script> embedPDF("presskit","presskit")</script>     
      </div>
   </div>
   </div>
