chore: fixed routing

--- a/download_cv.html
+++ b/download_cv.html
@@ -43,14 +43,14 @@
   <div class="main">
 
     <div class="buttons_bar">
-      <a class="btn_personal" id="eng" onclick="showButtonDiv(this.className, this.id)">In English</a>
-      <a class="btn_personal" id="de" onclick="showButtonDiv(this.className, this.id)">Auf Deutsch</a>
+      <a class="btn_cv" id="eng" onclick="showButtonDivCV(this.className, this.id)">In English</a>
+      <a class="btn_cv" id="de" onclick="showButtonDivCV(this.className, this.id)">Auf Deutsch</a>
     </div>
 
-    <div class=div_personal id="eng">
+    <div class=cv id="eng">
     <script> embedPDF("cv_eng","cv")</script>     
     </div>
-    <div class=div_personal id="de">
+    <div class=cv id="de">
       <script> embedPDF("cv_deutsch","cv")</script>     
     </div>
     
