chore: one style

--- a/download_cv.html
+++ b/download_cv.html
@@ -50,7 +50,7 @@
     <div class=cv id="eng">
     <script> embedPDF("cv_eng","cv")</script>     
     </div>
-    <div class=cv id="de">
+    <div class=cv id="de" hidden="hidden">
       <script> embedPDF("cv_deutsch","cv")</script>     
     </div>
     
