chore: more tests

--- a/download_cv.html
+++ b/download_cv.html
@@ -48,10 +48,10 @@
     </div>
 
     <div class=cv id="eng">
-    <script> embedPDF("cv_eng","cv")</script>     
+    <script> embedPDF("cv_eng","eng")</script>     
     </div>
     <div class=cv id="de" hidden="hidden">
-      <script> embedPDF("cv_deutsch","cv")</script>     
+      <script> embedPDF("cv_deutsch","de")</script>     
     </div>
     
 </div>
