chore: test cv embed

--- a/download_cv.html
+++ b/download_cv.html
@@ -43,8 +43,8 @@
   <div class="main">
 
     <div class="buttons_bar">
-      <a class="btn_cv" id="eng" onclick="showButtonDivCV(this.className, this.id)">In English</a>
-      <a class="btn_cv" id="de" onclick="showButtonDivCV(this.className, this.id)">Auf Deutsch</a>
+      <a class="btn_cv" id="eng_btn" onclick="showButtonDivCV(this.className, this.id)">In English</a>
+      <a class="btn_cv" id="de_btn" onclick="showButtonDivCV(this.className, this.id)">Auf Deutsch</a>
     </div>
 
     <div class=cv id="eng">
