fix: hide deutsch variante

--- a/download_cv.html
+++ b/download_cv.html
@@ -47,10 +47,10 @@
       <a class="btn_cv" id="btn_de" onclick="showButtonDivCV(this.className, this.id)">Auf Deutsch</a>
     </div>
 
-    <div class=cv id="eng">
+    <div class=div_cv id="eng">
     <script> embedPDF("cv_eng","eng")</script>     
     </div>
-    <div class=cv id="de" hidden="hidden">
+    <div class=div_cv id="de" hidden="hidden">
       <script> embedPDF("cv_deutsch","de")</script>     
     </div>
     
