fix: match div's id and "btn_" +id

--- a/download_cv.html
+++ b/download_cv.html
@@ -43,8 +43,8 @@
   <div class="main">
 
     <div class="buttons_bar">
-      <a class="btn_cv" id="eng" onclick="showButtonDivCV(this.className, this.id)">In English</a>
-      <a class="btn_cv" id="de" onclick="showButtonDivCV(this.className, this.id)">Auf Deutsch</a>
+      <a class="btn_cv" id="btn_eng" onclick="showButtonDivCV(this.className, this.id)">In English</a>
+      <a class="btn_cv" id="btn_de" onclick="showButtonDivCV(this.className, this.id)">Auf Deutsch</a>
     </div>
 
     <div class=div_cv id="eng">
