--- a/download_cv.html
+++ b/download_cv.html
@@ -58,8 +58,8 @@
 </div>
 
 <div class="footer">
-  <h2>Treibs nicht zu bunt 🪂</h2>
-  <p>Made with 🍺, somewhere</p>
+  <h2>Treib's nicht zu bunt 🪂</h2>
+  <p>Made with 🍺, somewhere.</p>
   <a href="mailto:maxescovi@gmail.com" ><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/gmail.svg" alt="gmail"></a>
   <a href="https://www.instagram.com/perro_flac0/?hl=es-la"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/instagram.svg" alt="instagram"></a>
   <a href="https://www.youtube.com/@maxiboy_cl"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/youtube.svg" alt="youtube"></a> 
